@@ -32,6 +32,13 @@
     PartialBlur = "false";
   };
 
+  services.thinkfan.enable = true;
+
+  # https://discourse.nixos.org/t/thinkfan-not-working-in-nixos/8260
+  systemd.services.thinkfan.preStart = "
+    /run/current-system/sw/bin/modprobe  -r thinkpad_acpi && /run/current-system/sw/bin/modprobe thinkpad_acpi
+  ";
+
   modules = {
     steam.enable = true;
   };
