@@ -1,3 +1,12 @@
+3-10-2025
+- added hacker-mode nixos profile
+- created the "gman-pc" profile to sync preferences among all machines
+- added thinkfan for twilight
+- temperature module for twilight
+- added nix-gaming input and improved pipewire delay
+- Fixed the networkmanager icon not showing up on waybar
+
+
 2-28-2025
 - add neovim-custom option to both nixos and HM
 - default to my custom vim package but can be modified or disabled
